# solanaceae_fileserve

./: .gitignore  CMakeLists.txt
.github/workflows/: cd.yml  ci.yml
plugins/: CMakeLists.txt  plugin_fileserve.cpp
src/: CMakeLists.txt  fileserve.cpp  fileserve.hpp
